package com.performance.model;

public enum UserRole {
    ADMIN, EMPLOYEE, MANAGER_EMPLOYEE, HIGHBOARD_MANAGER
}
