package com.performance.model;

public enum UserStatus {
    ACTIVE, INACTIVE, SUSPENDED, PENDING
}
